--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -39,7 +39,7 @@
 
 .intro{
     background-color: #f7dbcd;
-    min-heigh:600px;
+    min-height:600px;
     width:100%;
     margin-top: 3% ;
     padding-top: 5px;
@@ -157,7 +157,8 @@ font-size: 0.3em ;
 box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
-@media screen and ( max-device-width:500px/*500*/){
+@media screen and ( max-device-width:500px),
+       screen and (max-width:500px){
 .intro{
     background-color: #f7dbcd;
     height:auto;
