--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -161,6 +161,15 @@ box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 @media screen and ( max-device-width:500px),
        screen and (max-width:700px){
+
+.navbar-brand{
+
+  padding-left: 10% ;
+  font-size: 3em ;
+  font-weight: bold;
+
+}
+
 .intro{
     background-color: #f7dbcd;
     height:auto;
