--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -6,6 +6,8 @@
   <title></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'css/homepage.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/nav.css' %}" type="text/css">
+
   <script src="{% static 'js/home.js'%}"></script>
 </head>
 
