--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -39,7 +39,7 @@
   <section class="intro">
 
     <div class="introText">
-      <h1 class="introMainTitle">Feeling not happy</h1>
+      <h1 class="introMainTitle"><strong>Not Feeling happy<strong></h1>
       <h2 class="introSubTitle">You know where to come</h2>
       <h2 class="tagLine">Your companion, guide, and <strong>Friend </strong>in the journey of life</h2>
       <button type="button" class="btn btn-lg btn-primary introLoginButton">LogIn</button>
