--- a/web_app/static/css/nav.css
+++ b/web_app/static/css/nav.css
@@ -14,7 +14,7 @@
     padding-right: 20% ;font-size: 1.25em ;
   }
   .nav-item{
-    padding-right: 10% ;color: white ;
+    padding-left: 7% ;color: white ;
   }
   .nav-link{
     color : white ;
