--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -1,59 +1,57 @@
-
 .intro{
-    background-color: #f7dbcd;min-height:600px;width:100%;margin-top: 3% ;padding-top: 5px;padding-bottom: 5px;display: flex;
+  background-color: #f7dbcd;min-height:40vh;width:100%;margin-top: 3% ;padding-top: 5px;padding-bottom: 5px;display: flex;
 }
 .main {
-    max-width: 100%;height: auto;
+  max-width: 100%;height: auto; @include img-fluid;
 }
 .IntroPic{
-    margin-right: 1% ;margin-top: 3% ;align-self: flex-end;max-width:50%;height:auto;
+  margin-right: 1% ;margin-top: 3% ;align-self: flex-end;max-width:100%;height:auto;padding-top: 25vh;
 }
 .introText{
-  font-size: 4em ;padding-left: 5% ;padding-top: 7% ;height:auto;width:100%;align-self: flex-start;
+font-size: 4em ;padding-left: 5% ;padding-top: 7% ;height:auto;width:100%;align-self: flex-start;
 }
 .introMainTitle{
-  text-align: left;font-size: 4vw;
+text-align: left;font-size: 4vw;
 }
 .introSubTitle{
-  font-size: 5vw ;
+font-size: 5vw ;
 }
 .tagLine{
-  margin-top: 5%;font-size:2vw;
+margin-top: 5%;font-size:2vw;
 }
 .introLoginButton{
-  margin-top: 10% ;padding-left: 10% ;padding-top: 0.5%;padding-bottom: 0.5% ;padding-right: 7% ;font-size: 0.3em ;
+margin-top: 10% ;padding-left: 10% ;padding-top: 0.5%;padding-bottom: 0.5% ;padding-right: 7% ;font-size: 0.3em ;
 }
 .introSignUpButton{
-  margin-top: 10% ;padding-left: 7% ;padding-top: 0.5%;padding-bottom: 0.5% ;padding-right: 10% ;font-size: 0.3em ;
+margin-top: 10% ;padding-left: 7% ;padding-top: 0.5%;padding-bottom: 0.5% ;padding-right: 10% ;font-size: 0.3em ;
 }
 .description{
-  padding: 7% 15% ;background-color: #b8b5ff;
+padding: 7% 15% ;background-color: #b8b5ff;
 }
 img {
-  max-width:100%;
+max-width:100%;
 }
 .feature-box{
-  display: flex;text-align: center;font-size: 0.75em;display: block;
+display: flex;text-align: center;font-size: 0.75em;display: block;
 }
 .feature-box-heading{
-  font-size: 20px;
+font-size: 20px;
 }
 #privacyImage{
-  border-radius: 5% ;margin-bottom: 5% ;
+border-radius: 5% ;margin-bottom: 5% ;
 }
 #service{
-  background-color: white ;padding: 2% 12% ;margin-bottom:10% ;width:100%;
+background-color: white ;padding: 2% 12% ;margin-bottom:10% ;width:100%;
 }
 #serviceHeading{
-  text-align: center;font-size: 3.25em ;font-weight: bold;padding-top: 4%;margin-bottom: 7%;
+text-align: center;font-size: 3.25em ;font-weight: bold;padding-top: 4%;margin-bottom: 7%;
 }
 .service-heading{
-  padding-top: 4% ;padding-bottom: 20% ;text-align: center;font-size: 25px;font-weight: bold;
+padding-top: 4% ;padding-bottom: 20% ;text-align: center;font-size: 25px;font-weight: bold;
 }
 .serviceImage{
 box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
 /* mobile CSS */
 
 
@@ -97,13 +95,14 @@ box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 
 /* width size less than 650px */
+
 @media only screen and (max-width:700px)
 {
 .intro{
     background-color: #f7dbcd;height:auto;width: 100%;margin-top: 3% ;padding-top: 10px;padding-bottom: 5px;display: table;
 }
 .IntroPic{
-  margin-right: 1% ;margin-top: 1% ;max-width:100%;height:auto;padding-left: 28%;
+  margin-right: 1% ;margin-top: 1% ;max-width:100%;height:auto;padding-left: 28%;padding-top: 0%;display: flexbox;
 }
 .introText{
   padding-left: 5% ;padding-top: 7% ;height:auto;width:100%;
