--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -46,7 +46,7 @@
       <button type="button" class="btn btn-lg btn-outline-primary introSignUpButton">SignUp</button>
     </div>
     <div class="IntroPic">
-      <img src="{% static 'img/homeTitilePic.jpg' %}" alt=""  >
+      <img src="{% static 'img/homeTitilePic.jpg' %}" alt="" class="main" >
     </div>
 
 
@@ -95,8 +95,6 @@
         <h3 class="service-heading">
           <b>Depression</b>
         </h3>
-
-
       </div>
 
       <div class="feature-box col-lg-4">
