--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -51,29 +51,29 @@
 
 
   </section>
-
-  <section class="description">
+<section class="description">
     <div class="row">
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" id="privacyImage">
+        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage">
         <h3 class="feature-box-heading">
           <b>Private and Confidential</b>
-        </h3 >
+        </h3>
 
 
       </div>
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" id="privacyImage" >
+        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage hide-mobile">
         <h3 class="feature-box-heading">
           <b>Community Support</b>
         </h3>
+        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage hide-lap">
 
       </div>
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" id="privacyImage">
+        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage">
         <h3 class="feature-box-heading">
           <b>Anonymous Discussions</b>
         </h3>
@@ -84,47 +84,248 @@
 
   </section>
 
-  <section id="service">
+  <!-- *************************************************************************************** -->
+  <!-- Overcome Your Problems Section -->
 
-    <h2 id="serviceHeading">Overcome your problems</h2>
+  <section class="service">
 
-    <div class="row">
+    <h2 class="serviceHeading">Overcome your problems</h2>
 
-      <div class="feature-box col-lg-4">
-        <img src="{% static 'img/depression2.png' %}" alt="Depression" id="depressionImage" class="serviceImage">
-        <h3 class="service-heading">
-          <b>Depression</b>
-        </h3>
+    <div class="row ">
+
+      <div class="service-box col-lg-4 col-md-6" style=" border-radius: 25px;">
+        <div class="service-box-div">
+
+
+
+          <div class="service-box-left-div" style="width: 40%; float:left">
+            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+          </div>
+
+          <div class="service-box-right-div" style="width:55%; float:right">
+            <h3 class="service-box-heading">
+              <bold>Depression</bold>
+            </h3>
+            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+          <br style="clear:both;" />
+        </div>
+
+
       </div>
 
-      <div class="feature-box col-lg-4">
-        <img src="{% static 'img/depression2.png' %}" alt="Anxiety" id="anxietyImage" class="serviceImage">
-        <h3 class="service-heading">
-          <b>Anxiety</b>
-        </h3>
+      <div class="service-box col-lg-4 col-md-6">
+
+        <div class="service-box-div">
+
+
+          <div class="service-box-left-div" style="width: 40%; float:left">
+            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+          </div>
+
+          <div class="service-box-right-div" style="width:55%; float:right">
+            <h3 class="service-box-heading">
+              <bold>Anxiety</bold>
+            </h3>
+            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+          <br style="clear:both;" />
+        </div>
+
 
       </div>
 
-      <div class="feature-box col-lg-4">
-        <img src="{% static 'img/depression2.png' %}" alt="Stress" id="stressImage" class="serviceImage">
-        <h3 class="service-heading">
-          <b>Stress</b>
-        </h3>
+      <div class="service-box col-lg-4 col-md-6">
 
+        <div class="service-box-div">
+
+          <div class="service-box-left-div" style="width: 40%; float:left">
+            <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+          </div>
+
+          <div class="service-box-right-div" style="width:55%; float:right">
+            <h3 class="service-box-heading">
+              <bold>Stress</bold>
+            </h3>
+            <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+
+          <br style="clear:both;" />
+        </div>
       </div>
+
+
     </div>
 
 
+  </section>
+
+  <!-- ******************************************************************************************** -->
+
+  <!-- Connect Section -->
+
+  <section class="connect">
+
+    <h2 class="serviceHeading">Connect With your Comfort</h2>
+
+    <div class="row connectMainDiv">
+
+      <div class="connectSubDiv col-lg-4 ">
+
+        <div class="connect-box-div">
+          <div class="connect-box-left-div" style="width: 30%; float:left">
+            <img src="{% static 'img/chatIcon2.png' %}" class="img-fluid connect-icon" alt="Responsive image">
+
+          </div>
+
+          <div class="connect-box-right-div" style="width:65%; float:right">
+            <h3 class="connect-box-heading">
+              <bold>Chat sessions</bold>
+            </h3>
+            <p class="connect-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+
+          <br style="clear:both;" />
+        </div>
+
+      </div>
+
+      <div class="connectSubDiv col-lg-4 ">
+
+        <div class="connect-box-div">
+          <div class="coonect-box-left-div" style="width: 30%; float:left">
+            <img src="{% static 'img/chatIcon2.png' %}" class="img-fluid connect-icon" alt="Responsive image">
+
+          </div>
+
+          <div class="connect-box-right-div" style="width:65%; float:right">
+            <h3 class="connect-box-heading">
+              <bold>Voice Calls</bold>
+            </h3>
+            <p class="connect-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+
+          <br style="clear:both;" />
+        </div>
+
+      </div>
+
+      <div class="connectSubDiv col-lg-4 ">
+
+        <div class="connect-box-div">
+          <div class="connect-box-left-div" style="width: 30%; float:left">
+            <img src="{% static 'img/chatIcon2.png' %}" class="img-fluid connect-icon" alt="Responsive image">
+
+          </div>
+
+          <div class="connect-box-right-div" style="width:65%; float:right">
+            <h3 class="connect-box-heading">
+              <bold>1 to 1 video sessions</bold>
+            </h3>
+            <p class="connect-box-content">Depression is a state of unhppiness for a long period of time.</p>
+          </div>
+
+          <br style="clear:both;" />
+        </div>
+
+      </div>
+
+
+    </div>
 
   </section>
 
-  <section >
+
+  <!-- ********************************************************************************************** -->
+
+  <!-- ************************************************************************************** -->
+
+  <!-- Self Test Section  -->
+  <h1 id="selfTestHead">Discover Yourself</h1>
+
+
+  <div class="row ">
+
+    <div class="service-box col-lg-4 col-md-6">
+      <div class="service-box-div">
 
 
 
-  </section>
+        <div class="service-box-left-div" style="width: 40%; float:left">
+          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+        </div>
+
+        <div class="service-box-right-div" style="width:55%; float:right">
+          <h3 class="service-box-heading">
+            <bold>Depression</bold>
+          </h3>
+          <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+        </div>
+        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
+        <br style="clear:both;" />
+      </div>
 
 
+    </div>
+
+    <div class="service-box col-lg-4 col-md-6">
+      <div class="service-box-div">
+
+
+
+        <div class="service-box-left-div" style="width: 40%; float:left">
+          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+        </div>
+
+        <div class="service-box-right-div" style="width:55%; float:right">
+          <h3 class="service-box-heading">
+            <bold>Depression</bold>
+          </h3>
+          <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+        </div>
+        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
+        <br style="clear:both;" />
+      </div>
+
+
+    </div>
+
+    <div class="service-box col-lg-4 col-md-6">
+      <div class="service-box-div">
+
+
+
+        <div class="service-box-left-div" style="width: 40%; float:left">
+          <img src="{% static 'img/depression2.png' %}" class="img-fluid" alt="Responsive image">
+
+        </div>
+
+        <div class="service-box-right-div" style="width:55%; float:right">
+          <h3 class="service-box-heading">
+            <bold>Depression</bold>
+          </h3>
+          <p class="service-box-content">Depression is a state of unhppiness for a long period of time.</p>
+        </div>
+        <button class="btn btn-lg btn-primary begin-button" type="button" name="button">Begin Test</button>
+        <br style="clear:both;" />
+      </div>
+
+
+    </div>
+
+
+  </div >
+  <!-- !-- ******************************************************************************************************* --> -->
+
+
+  <script type="javascript" src="homepage.js">
+
+  </script>
 </body>
 
 </html>
