--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -137,16 +137,30 @@ border-radius: 5% ;margin-bottom: 5% ;margin: 5px 5px ;
   box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
+.connectSubDiv:hover {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  animation-name: connect;
+  animation-duration: 0.10s;
+  border-left: 8px solid #b8b5ff;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+@keyframes connect {
+    0%   {border-left: 2px solid #ffffff;}
+    25%  {border-left: 3px solid #b8b5df;}
+    50%  {border-left: 4px solid #b8b5ea;}
+    100% {border-left: 5px solid #b8b5ff;}
+}
 .connect-box-div{
   margin-right: 5% ;
 }
 .connect-box-right-div{
 
-  padding-top: 15% ;
+  padding-top: 50px ;
 }
 .connect-icon{
 
-margin-top: 45% ;
+margin-top: 4% ;
 margin-left: 4% ;
 
 }
