--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -183,9 +183,9 @@
 
           <div class="connect-box-right-div" style="width:65%; float:right">
             <h3 class="connect-box-heading">
-              <bold>Chat sessions</bold>
+              <b>Chat sessions</b>
             </h3>
-            <p class="connect-box-content">Depression is a state of unhppiness for a long period of time.</p>
+            <p >Depression is a state of unhppiness for a long period of time.</p>
           </div>
 
           <br style="clear:both;" />
@@ -203,7 +203,7 @@
 
           <div class="connect-box-right-div" style="width:65%; float:right">
             <h3 class="connect-box-heading">
-              <bold>Voice Calls</bold>
+              <b>Voice Calls</b>
             </h3>
             <p class="connect-box-content">Depression is a state of unhppiness for a long period of time.</p>
           </div>
