--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -86,6 +86,9 @@ border-radius: 5% ;margin-bottom: 5% ;margin: 5px 5px ;
   padding: 2% 4% ;
   margin-bottom:1% ;
 }
+.carousel-item {
+    height: 500px;
+}
 
 .serviceHeading{
   text-align: center;
@@ -121,7 +124,7 @@ border-radius: 5% ;margin-bottom: 5% ;margin: 5px 5px ;
                                        /* Connect Css */
 
 
-.connect{
+#connect{
 
   min-height: 40vh;
   background-color: #edeef7;
@@ -156,11 +159,11 @@ border-radius: 5% ;margin-bottom: 5% ;margin: 5px 5px ;
 }
 .connect-box-right-div{
 
-  padding-top: 50px ;
+  padding-top: 25px ;
 }
 .connect-icon{
 
-margin-top: 4% ;
+margin-top: 15% ;
 margin-left: 4% ;
 
 }
@@ -197,7 +200,7 @@ margin-top: 25% ;
 
 
 
-@media screen and (max-device-width:500px)
+@media screen and (max-width:500px)
 {
 .intro{
     background-color: #f7dbcd;height:auto;width: 100%;margin-top: 3% ;
@@ -205,7 +208,7 @@ margin-top: 25% ;
 }
 .IntroPic{
   margin-right: 1% ;margin-top: 1% ;min-width:100%;
-  height:auto;padding-left: 37%;padding-top: 150px;
+  height:auto;padding-left: 30%;padding-top: 1vh;
 }
 .introText{
   padding-left: 5% ;padding-top: 7% ; height:auto; width:100%;
@@ -215,21 +218,23 @@ margin-top: 25% ;
 }
 
 .introMainTitle{
-  padding-top:200px;font-size: 10vw;
+  padding-top:10vh;font-size: 10vw;
 }
 
 .introSubTitle{
-  padding-top:10px;font-size: 7vw;
+  padding-top:1vh;font-size: 7vw;
 }
 
 .tagLine{
-  margin-top: 5%; padding-top:100px;padding-bottom: 100px;  font-size:8vw;
+  margin-top: 5%; padding-top:8vh;padding-bottom: 2vh;  font-size:8vw;
 }
 .introLoginButton{
-  font-size: 0.7em ;
+  font-size: 0.3em ;
+  margin: 6%;
 }
 .introSignUpButton{
-  font-size: 0.7em ;
+  font-size: 0.3em ;
+  margin: 3%;
 }
 .hide-mobile{
   display: none;
@@ -255,7 +260,7 @@ border-radius: 5% ;min-width:40%;margin: 5% 5%;
 
 /* width size less than 650px */
 
-@media only screen and (max-width:700px)
+@media screen and (max-width:700px) and (min-width:501px),
 {
 .intro{
     background-color: #f7dbcd;height:auto;width: 100%;
