--- a/web_app/static/css/nav.css
+++ b/web_app/static/css/nav.css
@@ -22,16 +22,16 @@
 
 
   /* Mobile view */
-@media screen and ( max-device-width:500px)
+@media screen and (max-device-width:500px)
 {
 .navbar-brand{
-  padding-left: 7% ;font-size: 3.4em ;font-weight: bold;
+  padding-left: 7% ;font-size: 1.5em ;font-weight: bold;
 }
 .nav-item{
   padding-left: 7% ;color: white ;
 }
 .nav-link{
-  color : white ;font-size: 1.5em;
+  color : white ;
 }
 
 }
