--- a/web_app/static/css/homepage.css
+++ b/web_app/static/css/homepage.css
@@ -72,7 +72,7 @@ border-radius: 5% ;margin-bottom: 5% ;margin: 5px 5px ;
   font-size: 5vw;padding-top: 10px;
   }
   .privacyImage{
-  border-radius: 5% ;min-width:40%;margin: 5% 5%;
+  border-radius: 5% ;min-width:10px;margin: 5% 5%;max-width: 50px;
   }
 }
 /* /////////////////////////////////////////             3rd   //////////////////////////////       */
