--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -6,8 +6,10 @@
   <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/homepage.css' %}" type="text/css">
   <link rel="stylesheet" href="{% static 'css/nav.css' %}" type="text/css">
+  <link rel="stylesheet" href="{% static 'css/login.css' %}" type="text/css">
   <script src="{% static 'js/home.js'%}"></script>
 </head>
 
@@ -21,10 +23,10 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item ">
-          <a class="nav-link" aria-current="page" href="#">LogIn</a>
+          <a class="nav-link" aria-current="page" data-bs-toggle="modal" data-bs-target="#exampleModal">LogIn</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">SignUp</a>
+          <a class="nav-link" href="file:///C:/Users/prate/Desktop/homepage/login.html">SignUp</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link" aria-current="page" href="#">Test</a>
@@ -34,9 +36,102 @@
   </nav>
 
 
+  <!--
+  ******************************************************************************************************* -->
+  <!-- Login Modal Box -->
+  <!-- Trigger the modal with a button -->
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
 
+        <!-- <div class="modal-body"> -->
+          <div class="wrapper">
+            <div class="title-text">
+              <div class="title login">
+                Login Form</div>
+              <div class="title signup">
+                Signup Form</div>
+            </div>
+            <div class="form-container">
+              <div class="slide-controls">
+                <input type="radio" name="slide" id="login" checked>
+                <input type="radio" name="slide" id="signup">
+                <label for="login" class="slide login">Login</label>
+                <label for="signup" class="slide signup">Signup</label>
+                <div class="slider-tab">
+                </div>
+              </div>
+              <div class="form-inner">
+                <form action="#" class="login">
+                  <div class="field">
+                    <input type="text" placeholder="Email Address" required>
+                  </div>
+                  <div class="field">
+                    <input type="password" placeholder="Password" required>
+                  </div>
+                  <div class="pass-link">
+                    <a href="#">Forgot password?</a>
+                  </div>
+                  <div class="field btn">
+                    <div class="btn-layer">
+                    </div>
+                    <input type="submit" value="Login">
+                  </div>
+                  <div class="signup-link">
+                    Not a member? <a href="">Signup now</a></div>
+                </form>
+                <form action="#" class="signup">
+                  <div class="field">
+                    <input type="text" placeholder="Email Address" required>
+                  </div>
+                  <div class="field">
+                    <input type="password" placeholder="Password" required>
+                  </div>
+                  <div class="field">
+                    <input type="password" placeholder="Confirm password" required>
+                  </div>
+                  <div class="field btn">
+                    <div class="btn-layer">
+                    </div>
+                    <input type="submit" value="Signup">
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <!-- </div> -->
+    </div>
+  </div>
+
+
+
+      <script>
+        const loginText = document.querySelector(".title-text .login");
+        const loginForm = document.querySelector("form.login");
+        const loginBtn = document.querySelector("label.login");
+        const signupBtn = document.querySelector("label.signup");
+        const signupLink = document.querySelector("form .signup-link a");
+        signupBtn.onclick = (() => {
+          loginForm.style.marginLeft = "-50%";
+          loginText.style.marginLeft = "-50%";
+        });
+        loginBtn.onclick = (() => {
+          loginForm.style.marginLeft = "0%";
+          loginText.style.marginLeft = "0%";
+        });
+        signupLink.onclick = (() => {
+          signupBtn.click();
+          return false;
+        });
+      </script>
+
+    </div>
+  </div>
+
+<!-- ///////////////////////////////////////////////// -->
   <section class="intro">
 
     <div class="introText">
@@ -56,7 +151,7 @@
     <div class="row">
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage">
+        <img src="{% static 'img/privacy.svg' %}" alt="Privacy Matters" class="privacyImage">
         <h3 class="feature-box-heading">
           <b>Private and Confidential</b>
         </h3>
@@ -65,16 +160,16 @@
       </div>
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage hide-mobile">
+        <img src="{% static 'img/communitySupporticon.svg' %}" alt="Privacy Matters" class="privacyImage hide-mobile">
         <h3 class="feature-box-heading">
           <b>Community Support</b>
         </h3>
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage hide-lap">
+        <img src="{% static 'img/communitySupporticon.svg' %}" alt="Privacy Matters" class="privacyImage hide-lap">
 
       </div>
 
       <div class="feature-box col-lg-4">
-        <img src="{% static 'img/privacy.jpg' %}" alt="Privacy Matters" class="privacyImage">
+        <img src="{% static 'img/anonymous.svg' %}" alt="Privacy Matters" class="privacyImage">
         <h3 class="feature-box-heading">
           <b>Anonymous Discussions</b>
         </h3>
@@ -346,6 +441,7 @@
   </div >
 
 <!-- //////////////////////////////////////////////////////////////////////// -->
+
 
 
   <script type="javascript" src="homepage.js"></script>
